# bap-be-bot

./: .dockerignore  .gitignore  Dockerfile  bot.py  config.py  container.py  db.py  docker-compose.yml  embedder.py  embedding.py  llm.py  logger.py  migrate.py  prompt.py  pyproject.toml  rag.py  streaming.py  vectorstore.py
.github/workflows/: build.yaml  deploy.yaml  start-k3s.yaml
app/: conftest.py
app/bot/: discord.py  message.py  telegram.py
app/core/: chat_model.py  config.py  database.py  db.py  llm.py  logger.py  settings.py  state.py
app/donate/: donate_handler.py  donate_service.py
app/facial/: facial_graph.py  facial_handler.py  facial_model.py  facial_node.py  facial_state.py  facial_test.py
app/rag/: message_model.py  message_repository.py  rag_graph.py  rag_node.py  rag_state.py  rag_vectorstore.py
app/tarot/: tarot_card_model.py  tarot_graph.py  tarot_handler.py  tarot_node.py  tarot_state.py  tarot_telling_card_model.py  tarot_test.py
app/user/: user_handler.py  user_model.py  user_service.py  user_test.py
app/utils/: image.py
app/ziwei/: ziwei_graph.py  ziwei_handler.py  ziwei_model.py  ziwei_node.py  ziwei_service.py  ziwei_state.py  ziwei_test.py
k8s/: README.md
k8s/base/: deployment.yaml  kustomization.yaml  secret.yaml
k8s/overlays/dev/: .env.example  kustomization.yaml  namespace.yaml
k8s/overlays/master/: .env.example  kustomization.yaml  namespace.yaml
models/: conversation.py  message.py
ziwei/: ziwei_graph.py  ziwei_node.py  ziwei_service.py  ziwei_state.py
