[project]
name = "bap-be-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bytewax>=0.21.1",
    "dependency-injector>=4.46.0",
    "langchain>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "langchain-pinecone>=0.2.3",
    "langchain-qdrant>=0.2.0",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "pytest-dotenv>=0.5.2",
    "python-telegram-bot>=21.10",
    "redis>=5.2.1",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "nest-asyncio>=1.6.0",
    "notebook>=7.3.2",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = "-s --durations=0"
python_files = ["*_test.py"]
