[project]
name = "bap-be-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bytewax>=0.21.1",
    "langchain>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "langchain-huggingface>=0.1.2",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.3.21",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pydantic-settings>=2.8.1",
    "pytest-dotenv>=0.5.2",
    "python-telegram-bot>=21.10",
    "redis>=5.2.1",
    "tenacity>=9.0.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.29.3",
    "ipykernel>=6.29.5",
    "nest-asyncio>=1.6.0",
    "notebook>=7.3.2",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = "-s --durations=0"
python_files = ["*_test.py"]

[tool.ruff]
line-length = 140
