[project]
name = "bap-be-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "discord>=2.3.2",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "pillow>=11.1.0",
    "pydantic-settings>=2.8.1",
    "pymongo>=4.16.0",
    "pymupdf>=1.26.7",
    "python-telegram-bot>=21.10",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nest-asyncio>=1.6.0",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "python-dotenv[cli]>=1.0.1",
    "ruff>=0.9.9",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = "-s --durations=0"
python_files = ["*_test.py"]

[tool.ruff]
line-length = 140
